istio/tls-passthrough/https-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: steveltn/https-portal:1
          ports:
          - containerPort: 443
            name: https
---
kind: Service
apiVersion: v1
metadata:
  name: backend
spec:
  ports:
    - protocol: TCP
      port: 443
      name: https
  selector:
    app: backend
