istio/tls-passthrough/https-backend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  gateways:
  - https-backend-gateway
  hosts:
  - backend.192-168-99-100.nip.io
  tls:
  - match:
    - sniHosts:
      - backend.192-168-99-100.nip.io
    route:
    - destination:
        host: backend
